--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5"
   }
 }
